--- a/Extensions/Compass/stylesheets/compass/_layout.scss
+++ b/Extensions/Compass/stylesheets/compass/_layout.scss
@@ -1,3 +1,3 @@
-@import "layout/grid-background";
-@import "layout/sticky-footer";
-@import "layout/stretching";
+@import "layout/layout/_grid-background";
+@import "layout/layout/_sticky-footer";
+@import "layout/layout/_stretching";
