--- a/Extensions/Compass/stylesheets/compass/_utilities.scss
+++ b/Extensions/Compass/stylesheets/compass/_utilities.scss
@@ -1,8 +1,8 @@
-@import "utilities/color";
-@import "utilities/general";
-@import "utilities/sprites";
-@import "utilities/tables";
+@import "utilities/utilities/_color";
+@import "utilities/utilities/_general";
+@import "utilities/utilities/_sprites";
+@import "utilities/utilities/tables";
 // deprecated
-@import "typography/links";
-@import "typography/lists";
-@import "typography/text";
+@import "typography/typography/_links";
+@import "typography/typography/lists";
+@import "typography/typography/_text";
