--- a/Extensions/Compass/stylesheets/compass/typography/_links.scss
+++ b/Extensions/Compass/stylesheets/compass/typography/_links.scss
@@ -1,3 +1,3 @@
-@import "links/hover-link";
-@import "links/link-colors";
-@import "links/unstyled-link";
+@import "links/links/_hover-link";
+@import "links/links/_link-colors";
+@import "links/links/_unstyled-link";
