--- a/Extensions/Compass/stylesheets/compass/utilities/_tables.scss
+++ b/Extensions/Compass/stylesheets/compass/utilities/_tables.scss
@@ -1,3 +1,3 @@
-@import "tables/alternating-rows-and-columns";
-@import "tables/borders";
-@import "tables/scaffolding";
+@import "tables/tables/_alternating-rows-and-columns";
+@import "tables/tables/_borders";
+@import "tables/tables/_scaffolding";
